--- a/core/src/styles/_variables.scss
+++ b/core/src/styles/_variables.scss
@@ -16,13 +16,6 @@ $cat-nav-padding-horizontal: 0.75rem;
 $cat-mark-color: cat-token('color.theme.primary.bg', 0.2);
 
 // --------
-// -- z-indexes
-// --------
-
-$cat-dropdown-z-index: 100 !default;
-$cat-tooltip-z-index: 200 !default;
-
-// --------
 // -- Elevations
 // --------
 
